Fixes missing margin issue in IE

--- a/src/css/module/_author.scss
+++ b/src/css/module/_author.scss
@@ -15,6 +15,8 @@
 }
 
 .author-avatar {
+  display: block; // This fixes the no-`.media-figure` margin issue on IE
+                  // (but only here, not sure if it should be in `.media-figure`)
   img {
     width: modular-scale(5);
     border-radius: 50%;
